Feat: Criação de endpoint de update de informações e contas do cliente, criação de endpoint de recuperação de dados de uma conta do cliente
